# laralux

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: autostart.rs  beekeeper.rs  bin.rs  certutil_static.rs  config.rs  coredns.rs  dbgate.rs  filemanager.rs  hosts.rs  layout.rs  lib.rs  mailpit_static.rs  mariadb_static.rs  mkcert_static.rs  mongodb_static.rs  nginx_static.rs  node_static.rs  orchestrator.rs  orphans.rs  paths.rs  php_cli.rs  php_ini.rs  php_static.rs  php_versions.rs  postgres_static.rs  privileged.rs  process.rs  procfile.rs  progress.rs  redis_static.rs  scaffold.rs  setup.rs  shell_env.rs  site_procs.rs  site_registry.rs  sites.rs  ssl.rs  symlinks.rs  sync.rs  terminal.rs  (+1 more)
core/src/service/: coredns.rs  mailpit.rs  mariadb.rs  mod.rs  mongodb.rs  nginx.rs  php_fpm.rs  postgres.rs  redis.rs  registry.rs
debian/: .gitignore  changelog  com.laralux.desktop  com.laralux.linux.desktop  control  copyright  laralux.desktop  rules
docs/debian/: ITP.md  RFS.md  roadmap.md
laragonctl/: Cargo.toml
laragonctl/src/: main.rs
laraluxctl/: Cargo.toml
laraluxctl/src/: main.rs
scripts/: install-dev-desktop.sh
src/: main.ts  state.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/ipc/: commands.ts  events.ts  types.ts
src/ui/: constants.ts  events.ts  (+6 more)
(+151 files in other folders)
