[package]
name = "laralux-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "laralux_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json = "1"
toml.workspace = true
thiserror.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
