[package]
name = "laralux-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "laralux-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = "1"
laralux-core = { path = "../core" }
notify = "6"
